# oxwm

./: Cargo.toml  default.nix
resources/: test-config.lua
src/: lib.rs  monitor.rs  tab_bar.rs  window_manager.rs
src/animations/: mod.rs  scroll.rs
src/bar/: bar.rs  font.rs
src/bar/blocks/: battery.rs  button.rs  mod.rs  shell.rs
src/config/: lua_api.rs
src/keyboard/: handlers.rs
src/layout/: mod.rs  scrolling.rs  tiling.rs
src/overlay/: error.rs  keybind.rs  mod.rs
src/x11/: atom.rs  mod.rs  xlib_graphic_context.rs
templates/: config.lua  oxwm.lua  tonarchy-config.lua
