[package]
name = "oxwm"
version = "0.10.0"
edition = "2024"

[lib]
name = "oxwm"
path = "src/lib.rs"

[[bin]]
name = "oxwm"
path = "src/bin/main.rs"

[dependencies]
x11 = { version = "2.21", features = ["xlib", "xft"] }
x11rb = { version = "0.13", features = ["cursor", "xinerama"] }
chrono = "0.4"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
mlua = { version = "0.10", features = ["lua54", "vendored"] }
